fixed overflowing body on mobile

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
 }
 .body2 {
     display: grid;
+    overflow: hidden;
 }
 
 h2{
